fixed previous/next spacing, etc

--- a/stonewareglazes/app/static/styles/style.css
+++ b/stonewareglazes/app/static/styles/style.css
@@ -154,7 +154,7 @@ div.wrapper {
     width: 980px;
     margin: 0 auto;
     padding: 10px;
-    background-color: #fff;
+    background-color: #fed;
 }
 
 div.content
